--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -409,7 +409,7 @@ footer.footer-form p span.asterisco {
   color: #ff758c;
 }
 
-/**cuerpo BLOG **/
+/**cuerpo BLOG 
 .blog-area {
   margin-top: 50px;
   height: auto;
@@ -522,7 +522,7 @@ footer.footer-form p span.asterisco {
   border: 1px solid #3EC1D5;
   color: #3EC1D5;
   text-decoration: none;
-}
+}**/
 
 /**footer**/
 .site-footer {
